@@ -1,3 +1,8 @@
+2014-08-19  James Pallister  <james.pallister@embecosm.com>
+
+	* superopt.c: Changed the test counters and limits to 64 bit to
+		avoid overflow.
+
 2014-08-18  James Pallister  <james.pallister@embecosm.com>
 	
 	* superopt.c: Add a -test-limit option to specify the maximum
